--- a/mediawiki_pvc.yaml
+++ b/mediawiki_pvc.yaml
@@ -17,7 +17,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mediawiki-pv-claim
-  namespace: mediawiki-ns
+  namespace: thoughtworks
 spec:
   storageClassName: auto
   accessModes:
@@ -25,15 +25,3 @@ spec:
   resources:
     requests:
       storage: 20Gi
----
-
-apiVersion: storage.k8s.io/v1
-kind: StorageClass
-metadata:
-  name: auto
-provisioner: kubernetes.io/aws-ebs
-parameters:
-  type: gp2
-  iopsPerGB: "10"
-  fsType: ext4
----
