--- a/mediawiki_service.yaml
+++ b/mediawiki_service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: mediawiki-ns
+  namespace: thoughtworks 
   name: mediawiki-service
   labels:
     name: mediawiki-service
